Add a description of the program and its features

--- a/CoursesCertificationProjects/Responsive-Web-Design/Survey-Form/index.html
+++ b/CoursesCertificationProjects/Responsive-Web-Design/Survey-Form/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--
+Renold Thomas
+Customer Feedback Survey Form
+A responsive web form that collects customer feedback including personal information, 
+ratings, referral sources, purchase motivations, service usage patterns, and additional 
+comments. Features multiple input types (text, email, number, radio buttons, checkboxes, 
+dropdown, textarea) organized in semantic fieldsets for accessibility and user experience.
+-->
 
 <head>
     <meta charset="utf-8">
