--- a/CoursesCertificationProjects/Responsive-Web-Design/Personal-Portfolio/index.html
+++ b/CoursesCertificationProjects/Responsive-Web-Design/Personal-Portfolio/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Test</h1>
-    <p>This is a test page for the Personal Portfolio project.</p>
-    <p>Make sure to check the styles and layout.</p>
-    <a href="https://www.freecodecamp.org" target="_blank">Visit FreeCodeCamp</a>
-</body>
+    
 </html>
