--- a/CoursesCertificationProjects/Responsive-Web-Design/Personal-Portfolio/index.html
+++ b/CoursesCertificationProjects/Responsive-Web-Design/Personal-Portfolio/index.html
@@ -1,11 +1,166 @@
 <!DOCTYPE html>
+<!--
+Renold Thomas
+This is a personal portfolio webpage with projects, certifications and social links for future employers. -->
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Renold Thomas Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+    <input type="checkbox" id="mobile-menu" class="mobile-menu-checkbox">
+
+    <nav id="navbar">
+        <div class="nav-container">
+            <a href="#welcome-section" class="logo">RT</a>
+            <div class="nav-links">
+                <a href="#welcome-section">About</a>
+                <a href="#projects">Projects</a>
+                <a href="#certifications">Certifications</a>
+                <a href="#socials">Contact</a>
+            </div>
+            <label for="mobile-menu" class="mobile-menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+        </div>
+    </nav>
+
+    <section id="welcome-section">
+        <div class="welcome-content">
+            <h1>Hi, I'm Renold Thomas</h1>
+            <p class="welcome-subtitle">Full Stack Developer & Creative Problem Solver</p>
+            <a href="#projects" class="cta-button">View My Work</a>
+        </div>
+    </section>
+
+    <section id="projects">
+        <div class="section-container">
+            <h2 class="section-title">Projects</h2>
+            <div class="projects-grid">
+
+                <!-- Brew Bliss Project -->
+                <div class="project-tile">
+                    <a href="https://renoldthomas.github.io/freeCodeCamp/Product-Landing-Page" target="_blank">
+                        <div class="project-image">
+                            <i class="fas fa-coffee"></i>
+                        </div>
+                        <div class="project-content">
+                            <h3>Brew Bliss</h3>
+                            <p>A responsive product landing page for a coffee company featuring modern design and smooth
+                                animations.</p>
+                            <span class="project-link">View Project <i class="fas fa-arrow-right"></i></span>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- Feedback Survey Project-->
+                <div class="project-tile">
+                    <a href="https://renoldthomas.github.io/freeCodeCamp/Survey-Form" target="_blank">
+                        <div class="project-image">
+                            <i class="fas fa-envelope"></i>
+                        </div>
+                        <div class="project-content">
+                            <h3>Feedback Survey</h3>
+                            <p>BA responsive customer feedback survey form that collects personal information, ratings,
+                                referral sources, purchase motivations, and service usage patterns using various input
+                                types organized in semantic fieldsets.</p>
+                            <span class="project-link">View Project <i class="fas fa-arrow-right"></i></span>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- Technical Documentation Project -->
+                <div class="project-tile">
+                    <a href="https://renoldthomas.github.io/freeCodeCamp/Technical-Documentation" target="_blank">
+                        <div class="project-image">
+                            <i class="fas fa-code"></i>
+                        </div>
+                        <div class="project-content">
+                            <h3>React.js Documentation</h3>
+                            <p>BA comprehensive React.js documentation website featuring a fixed navigation sidebar and
+                                detailed sections covering React fundamentals from introduction and setup to advanced
+                                concepts like hooks and lifecycle methods..</p>
+                            <span class="project-link">View Project <i class="fas fa-arrow-right"></i></span>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- Bruno Mars Tribute Page Project -->
+                <div class="project-tile">
+                    <a href="https://renoldthomas.github.io/freeCodeCamp/Tribute-Page" target="_blank">
+                        <div class="project-image">
+                            <i class="fas fa-newspaper-o"></i>
+                        </div>
+                        <div class="project-content">
+                            <h3>Tribute Page Project</h3>
+                            <p>A visually appealing tribute page dedicated to Bruno Mars that showcases his achievements
+                                and impact on modern music with a captivating performance image, biographical
+                                information, and elegant responsive design.</p>
+                            <span class="project-link">View Project <i class="fas fa-arrow-right"></i></span>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="certifications">
+        <div class="section-container">
+            <h2 class="section-title">Certifications</h2>
+            <div class="certifications-grid">
+                <!-- Scientific Computing with Python Certification -->
+                <a href="https://freecodecamp.org/certification/RenoldThomas/scientific-computing-with-python-v7"
+                    target="_blank" class="certification-card">
+                    <div class="cert-icon">
+                        <i class="fa fa-free-code-camp"></i>
+                    </div>
+                    <h3>Scientific Computing with Python</h3>
+                    <p>freeCodeCamp - 2025</p>
+                </a>
+
+                <!-- Responsive Web Design Certification -->
+                <a href="https://freecodecamp.org/certification/RenoldThomas/responsive-web-design" target="_blank"
+                    class="certification-card">
+                    <div class="cert-icon">
+                        <i class="fa fa-free-code-camp"></i>
+                    </div>
+                    <h3>Responsive Web Design</h3>
+                    <p>freeCodeCamp - 2025</p>
+                </a>
+
+            </div>
+        </div>
+    </section>
+
+    <section id="socials">
+        <div class="section-container">
+            <h2 class="socials-title">Let's Connect</h2>
+            <div class="social-links">
+                <a href="https://instagram.com/renoldthomass" class="social-link instagram" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a id="profile-link" href="https://github.com/RenoldThomas" class="social-link github" target="_blank">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/renoldthomas/" class="social-link linkedin" target="_blank">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="mailto:renoldthomasp@gmail.com" class="social-link email">
+                    <i class="fas fa-envelope"></i>
+                </a>
+                <a href="tel:+15713069044" class="social-link phone">
+                    <i class="fas fa-phone"></i>
+                </a>
+            </div>
+        </div>
+    </section>
+</body>
+
 </html>
