--- a/CoursesCertificationProjects/JavaScript-Algo-and-DS/Roman-Numeral-Converter/index.html
+++ b/CoursesCertificationProjects/JavaScript-Algo-and-DS/Roman-Numeral-Converter/index.html
@@ -2,17 +2,23 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Decimal to Roman Numeral Converter</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Decimal to Roman Numeral Converter</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <label for="number">Enter a number:</label>
-  <input id="number" type="number"/>
-  <button id="convert-btn">Convert</button>
-  <div id="output"></div>
-  <script src="script.js"></script>
+    <div class="converter-container">
+        <h1>Roman Numerals</h1>
+        <p class="subtitle">Convert numbers to ancient Roman notation</p>
+
+        <label for="number">Enter a number (1-3999):</label>
+        <input id="number" type="number" min="1" max="3999" placeholder="42" />
+        <button id="convert-btn">Convert to Roman</button>
+        <div id="output"></div>
+    </div>
+
 </body>
 
 </html>
