--- a/CoursesCertificationProjects/JavaScript-Algo-and-DS/Roman-Numeral-Converter/index.html
+++ b/CoursesCertificationProjects/JavaScript-Algo-and-DS/Roman-Numeral-Converter/index.html
@@ -18,7 +18,7 @@
         <button id="convert-btn">Convert to Roman</button>
         <div id="output"></div>
     </div>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
