--- a/CoursesCertificationProjects/JavaScript-Algo-and-DS/Cash-Register/index.html
+++ b/CoursesCertificationProjects/JavaScript-Algo-and-DS/Cash-Register/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cash Register</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <h1>Cash Register</h1>
+
+        <div class="price-display">
+            Price: <span id="price-display">$1.87</span>
+        </div>
+
+        <div class="input-group">
+            <label for="cash">Cash from customer:</label>
+            <input type="number" id="cash" step="0.01" placeholder="Enter amount">
+        </div>
+
+        <button id="purchase-btn">Purchase</button>
+
+        <div id="change-due"></div>
+    </div>
+
     <script src="script.js"></script>
 </body>
+
 </html>
