--- a/CoursesCertificationProjects/JavaScript-Algo-and-DS/RPG-Creature-Search/index.html
+++ b/CoursesCertificationProjects/JavaScript-Algo-and-DS/RPG-Creature-Search/index.html
@@ -1,28 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPG Creature Search</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <input id="search-input">
-    <button id="search-button">Search</button>
 
-    <div id="creature-name"></div>
-    <div id="creature-id"></div>
-    <div id="weight"></div>
-    <div id="height"></div>
-    <div id="types"></div>
-    
-    <div id="hp"></div>
-    <div id="attack"></div>
-    <div id="defense"></div>
-    <div id="special-attack"></div>
-    <div id="special-defense"></div>
-    <div id="speed"></div>
+<body>
+    <div class="container">
+        <div class="header">
+            <h1>RPG Creature Search</h1>
+            <p>Discover mystical creatures from the realm</p>
+        </div>
+
+        <div class="search-container">
+            <div class="search-form">
+                <input type="text" id="search-input" placeholder="Enter creature name or ID..." required>
+                <button id="search-button">Search</button>
+            </div>
+
+            <div class="creature-info" id="creature-info">
+                <div class="creature-header">
+                    <div class="creature-basic-info">
+                        <h2 id="creature-name"></h2>
+                        <div class="creature-id" id="creature-id"></div>
+                    </div>
+                </div>
+
+                <div class="stats-grid">
+                    <div class="stat-card">
+                        <div class="stat-label">Weight</div>
+                        <div class="stat-value" id="weight"></div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-label">Height</div>
+                        <div class="stat-value" id="height"></div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-label">HP</div>
+                        <div class="stat-value" id="hp"></div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-label">Attack</div>
+                        <div class="stat-value" id="attack"></div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-label">Defense</div>
+                        <div class="stat-value" id="defense"></div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-label">Special Attack</div>
+                        <div class="stat-value" id="special-attack"></div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-label">Special Defense</div>
+                        <div class="stat-value" id="special-defense"></div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-label">Speed</div>
+                        <div class="stat-value" id="speed"></div>
+                    </div>
+                </div>
+
+                <div class="types-container">
+                    <div class="types-label">Types</div>
+                    <div id="types"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
